2005-02-05  Hans Breuer  <hans@breuer.org>

	* gdk/makefile.msc gdk/win32/makefile.msc gtk/makefile.msc.in :
	build with Cairo dependency. The patch to acually use Cairo
	on win32 will be on gtk-devel-list soon.
	* tests/makefile.msc : add testcairo building

	* gtk/stock-icons/makefile.msc : split command line into two to
	work with the shells default

Fri Feb  4 14:16:31 2005  Manish Singh  <yosh@gimp.org>

	* gtk/gtkaccelgroup.c (substitute_underscores): remove unused
	function.

	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_render):
	Add some extra parens for bitop order of operations disambiguiation.

	* gtk/gtkstock.c: Fix const confusion, make our own copy of the 
	domain when setting a translate function.

	* tests/testcombo.c: removed unused variable.

2005-02-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkstock.c (gtk_stock_lookup): Handle item->translation_domain
	being NULL.  (#166179, Diego Gonzalez)

2005-02-04  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Revert gtk_binary_version to 2.4.0. Fix
	up comment to talk only about backwards compat, not
	forward/backwards compat. (#166293, reported by Vincent Noel)

2005-02-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkpaned.c (gtk_paned_compute_position): Work better
	when there is not enough space. This avoids a nasty size
	allocation loop in the file chooser.  (#154007, reported 
	by Milosz Derezynski, patch by Robert Ögren)

2005-02-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c (gtk_entry_create_layout): Avoid spurious
	selection of RTL direction if the widget does not have 
	focus.  (#164125, Frederic Crozat)

Thu Feb  3 19:15:55 2005  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkdrawable-x11.c: #include cairo-xlib.h

2005-02-03  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdrawable.[ch] gdkpixmap.c gdkwindow.c: Add
	gdk_drawable_set_cairo_target().

	* tests/testtreeflow.c (enum): Use grand not rand as a variable